chore: Misc changes and refactorings